feat: add first content article

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</header>
 		<div class="first_block_title">your life is WebDev</div>
 		<p class="first_block_text">Whatever the approach to development may be, the final<br /> program must satisfy some fundamental properties</p>
-		<button class="btn-main">get started</button>
+		<button class="btn-main first_block_btn-main">get started</button>
 		<div class="first_block_social-links">
 			<a href="" class="first_block_social-link-mail"><img src="assets/icons/mail_fff.svg" class="first_block_social-link-icon" alt="icon"></a>
 			<a href="" class="first_block_social-link-facebook"><img src="assets/icons/facebook_fff.svg" class="first_block_social-link-icon" alt="icon"></a>
@@ -35,7 +35,24 @@
 		</div>
 	</div>
 	<main>
-
+		<section class="main__content_section">
+			<article class="rappresent__content_article">
+				<div class="rappresent__content_block">
+					<h2 class="rappresent__content_title">Rappresent your idea with<br />a smart Design</h2>
+					<p class="rappresent__content_text">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</p>
+					<button class="btn-main">get started</button>
+				</div>
+				<img src="assets/images/content-image-1.png" class="rappresent__content_image" alt="content-image-1">
+			</article>
+			<article class="main__content_our-community-article"></article>
+			<article class="main__content_implement-article"></article>
+		</section>
+		<section class="main__content_section2">
+			<article></article>
+		</section>
+		<section class="main__content_section3">
+			<article></article>
+		</section>
 	</main>
 	<footer></footer>
 </body>
