feat: add second content article

--- a/index.html
+++ b/index.html
@@ -36,16 +36,47 @@
 	</div>
 	<main>
 		<section class="main__content_section">
+
 			<article class="rappresent__content_article">
 				<div class="rappresent__content_block">
 					<h2 class="rappresent__content_title">Rappresent your idea with<br />a smart Design</h2>
 					<p class="rappresent__content_text">Tasks accompanying and related to programming include: testing, debugging, source code maintenance, <strong>implementation of build systems</strong>, and management of derived artifacts, such as the machine code of computer programs.</p>
 					<button class="btn-main">get started</button>
 				</div>
-				<img src="assets/images/content-image-1.png" class="rappresent__content_image" alt="content-image-1">
+				<div class="rappresent__content_image">
+					<img src="assets/images/content-image-1.png" alt="content-image-1">
+				</div>
 			</article>
-			<article class="main__content_our-community-article"></article>
-			<article class="main__content_implement-article"></article>
+
+			<article class="our-community__content_article">
+				<div class="our-community__content_block">
+					<div class="our-community__content_user-card">
+						<div class="our-community__content_user-card_image">
+							<img src="assets/images/userpic.png" alt="avatar">
+						</div>
+						<h2 class="our-community__content_user-card_title">our community</h2>
+						<p class="our-community__content_user-card_text">A hacker is any skilled computer expert that uses their technical knowledge to overcome a problem, but it can also mean a security hacker in common language</p>
+					</div>
+					<div class="our-community__content_image-block">
+						<div class="slider__nav_items">
+							<a href="" class="slider__nav_arrow"><img src="assets/icons/arrow-left.svg" alt="arrow-left"></a>
+							<div class="slider__nav_pagination">
+								<div class="slider__nav_pagination-page">1</div>
+								<img src="assets/icons/divider-icon.svg" alt="divider">
+								<div class="slider__nav_pagination-page">5</div>
+							</div>
+							<a href="" class="slider__nav_arrow"><img src="assets/icons/arrow-right.svg" alt="arrow-right"></a>
+						</div>
+						<div class="slider__items">
+							<div class="slider__items_image-container"><img src="assets/images/slider-item-1.png" alt="slider-item-1"></div>
+							<div class="slider__items_image-container"><img src="assets/images/slider-item-2.png" alt="slider-item-2"></div>
+							<div class="slider__items_image-container"><img src="assets/images/slider-item-3.png" alt="slider-item-3"></div>
+						</div>
+					</div>
+				</div>
+			</article>
+
+			<article class="implement__content_article"></article>
 		</section>
 		<section class="main__content_section2">
 			<article></article>
