feat: add third content article

--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
 				</div>
 			</article>
 
-			<article class="implement__content_article"></article>
+			<article class="implement__content_article">
+				<div class="implement__content_image">
+					<img src="assets/images/content-image-2.png" alt="content-image-2">
+				</div>
+				<div class="implement__content_block">
+					<h2 class="implement__content_title">Implement right Code</h2>
+					<p class="implement__content_text">These might be considered part of the <strong>programming process</strong>, but often the term software development is used for this larger process with the term programming, implementation.</p>
+					<button class="btn-main">learn more</button>
+				</div>
+			</article>
 		</section>
 		<section class="main__content_section2">
 			<article></article>
