feat: add sign-up section

--- a/index.html
+++ b/index.html
@@ -86,12 +86,19 @@
 					<button class="btn-main">learn more</button>
 				</div>
 			</article>
+
 		</section>
-		<section class="main__content_section2">
-			<article></article>
+
+		<section class="sign-up_section">
+			<div class="sign-up_section-text">sign up for our newsletter</div>
+			<form action="/form" class="sign-up_section-form">
+				<input type="email" placeholder="E-mail" required>
+				<button><img src="assets/icons/check-icon.svg" alt="check-icon"></button>
+			</form>
 		</section>
+
 		<section class="main__content_section3">
-			<article></article>
+
 		</section>
 	</main>
 	<footer></footer>
