--- a/index.html
+++ b/index.html
@@ -97,8 +97,19 @@
 			</form>
 		</section>
 
-		<section class="main__content_section3">
-
+		<section class="download_section">
+			<h2 class="download_section-title">Download the App</h2>
+			<p class="download_section-text">Machine code was the language of early programs, written in the instruction<br />set of the particular machine, often in binary notation.</p>
+			<div class="download_section-btn-container">
+				<button class="btn-main btn-download">
+					apple store
+					<span><img src="assets/icons/icon-apple.svg" alt="icon-apple"></span>
+				</button>
+				<button class="btn-main btn-download">
+					Play Market
+					<span><img src="assets/icons/icon-android.svg" alt="icon-androidn"></span>
+				</button>
+			</div>
 		</section>
 	</main>
 	<footer></footer>
