--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
 			</div>
 		</section>
 	</main>
-	<footer></footer>
+
+	<footer class="footer">
+		<nav class="footer__nav_block">
+			<ul class="footer__nav_list">
+				<li class="footer__nav_list-item"><a href="" class="footer__nav_list-link active">Credits</a></li>
+				<img src="assets/icons/mnu-items-divider.svg" alt="mnu-items-divider">
+				<li class="footer__nav_list-item"><a href="" class="footer__nav_list-link ">Privacy</a></li>
+				<img src="assets/icons/mnu-items-divider.svg" alt="mnu-items-divider">
+				<li class="footer__nav_list-item"><a href="" class="footer__nav_list-link ">Our teams</a></li>
+			</ul>
+		</nav>
+		<div class="footer__logo-container"><img src="assets/logo.svg" alt="logo"></div>
+		<p class="footer-text">by TonYem for RSS at 2020</p>
+	</footer>
 </body>
 </html>
