--- a/webdev/index.html
+++ b/webdev/index.html
@@ -16,11 +16,11 @@
 		<header class="header__block_header">
 			<nav class="header__block_menu-body">
 				<ul class="header__block_menu-list">
-					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link header__block_menu__link-left active">About</a></li>
-					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link header__block_menu__link-left">Syllabus</a></li>
+					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link active">About</a></li>
+					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link">Syllabus</a></li>
 					<li class="header__block_menu-list-item"><img src="assets/logo.svg" class="header__block_logo" alt="logo"></li>
-					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link header__block_menu__link-right">Projects</a></li>
-					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link header__block_menu__link-right">FAQ</a></li>
+					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link">Projects</a></li>
+					<li class="header__block_menu-list-item"><a href="" class="header__block_menu__link">FAQ</a></li>
 				</ul>
 			</nav>
 		</header>
